# trafficlight4ai

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_zh.md
.claude/commands/: github-release.md
.claude/commands/leo/: enable-ai.md  save-solution.md
.claude/memory/: MEMORY.md  feedback_gh_token.md  feedback_memory_sync_policy.md  feedback_readme_bilingual.md  feedback_release_update_docs.md  user_language.md
.github/workflows/: build.yml  linux-build.yml  package-jobs.yml  package-test.yml  release-packages.yml  windows-build.yml
docs/: 2026-06-05-tray-icon-not-turning-green.md  BUILD.md  BUILD_zh.md  HOOKS.md  HOOKS_zh.md  KNOWN_ISSUES.md  PROJECT_STRUCTURE.md
docs/superpowers/plans/: 2026-06-08-code-review-fixes.md  2026-06-08-edit-hooks-config.md
docs/superpowers/specs/: 2026-06-03-codex-support-design.md  2026-06-03-settings-dialog-design.md  2026-06-03-trafficlight4cc-design.md  2026-06-04-realistic-images-design.md  2026-06-05-i18n-design.md  2026-06-08-edit-hooks-config-design.md
packaging/linux/: build-appimage.sh  build-arch-pkg.sh  build-deb.sh  build-rpm.sh  trafficlight4ai.desktop
packaging/macos/: build-zip.sh
resources/: resources.qrc
src/: AiToolStrategy.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  FloatingWindow.cpp  FloatingWindow.h  IpcServer.cpp  IpcServer.h  ParticleSystem.cpp  ParticleSystem.h  SettingsDialog.cpp  SettingsDialog.h  SoundUtils.cpp  SoundUtils.h  StateManager.cpp  StateManager.h  TrafficLightWidget.cpp  TrafficLightWidget.h  TrayIcon.cpp  TrayIcon.h  main.cpp
tests/: CMakeLists.txt  test_ai_tool_strategy.cpp  test_config_manager.cpp  test_floating_window.cpp  test_ipc_server.cpp  test_settings_dialog.cpp  test_sound_utils.cpp  test_state_manager.cpp  test_tl4ai_ctl.cpp  test_traffic_light_widget.cpp  test_tray_icon.cpp
tools/: CMakeLists.txt  tl4ai_ctl.cpp
translations/: trafficlight4ai_ja.ts  trafficlight4ai_zh.ts
